# python-poetry-demo

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile_override_steps  Jenkinsfile_override_steps_from_diff_libs  Jenkinsfile_shared_lib  Jenkinsfile_simple  README.md  build-image.sh  pyproject.toml  setup.cfg
python_poetry_demo/: app.py  health.py
tests/: conftest.py  test_health.py
