[tool.poetry]
name = "python_poetry_demo"
version = "0.1.0"
description = "This is python-poetry-demo service"
authors = ["Rajan Patil <rajan.rb@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/rajanpatil/python-poetry-demo"
repository = "https://github.com/rajanpatil/python-poetry-demo"
keywords = ["python-poetry-demo"]

[tool.poetry.dependencies]
python = "~3.7"
Flask = "1.1.1"
gunicorn = "20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-html = "^2.1.0"
pytest-cov = "^2.8.1"
black = "^19.10b0"
pre-commit = "^2.1.1"
flake8 = "^3.7.9"
mypy = "^0.770"

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/resources
  | tests/docker
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
